Add latest update

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Genesis Gabiola">
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700|Roboto:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <title>The Bible | Tribute Page</title>
 </head>
 <body>
